addding more unit tests and logic

--- a/src/app/SaIdToDobComponent/SaIdToDobComponent.component.html
+++ b/src/app/SaIdToDobComponent/SaIdToDobComponent.component.html
@@ -3,4 +3,6 @@
 <h1>this is my Id {{ id }}</h1>
 
 <label>Date Of Birth</label>
-<input type="text" placeholder="{{ dob }}" />
+
+<input type="text" [(ngModel)]="dob" />
+<h1>this is my DOB {{ dob }}</h1>
